<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/title"
        android:layout_width="404dp"
        android:layout_height="121dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/homeTitle"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="15dp"
        tools:text="DRINK IT!" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/homeModeVoR"
        android:textAlignment="center"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/buttonLight"
        android:layout_width="100dp"
        android:layout_height="47dp"

        android:layout_marginStart="32dp"
        android:layout_marginTop="22dp"

        android:layout_weight="0.13"
        android:background="@color/colorAccent"
        android:text="@string/homeModeLow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <Button
        android:id="@+id/buttonMed"
        android:layout_width="100dp"
        android:layout_height="47dp"
        android:layout_weight="0.16"
        android:background="@color/colorPrimary"
        android:text="@string/homeModeMed"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintLeft_toRightOf="@+id/buttonLight"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/buttonHigh"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.549" />

    <Button
        android:id="@+id/buttonHigh"
        android:layout_width="100dp"
        android:layout_height="47dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="22dp"
        android:layout_weight="0.18"
        android:background="@color/colorPrimaryDark"
        android:text="@string/homeModeHigh"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <Button
        android:id="@+id/buttonYoNunca"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="26dp"
        android:layout_weight="0.88"
        android:background="@color/colorPrimary"
        android:text="@string/homeModeYN"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todosLosVR" />

    <Button
        android:id="@+id/todosLosVR"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="26dp"
        android:layout_weight="0.72"
        android:background="@color/colorAccent"
        android:text="@string/homeModeAll"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMed" />

    <Button
        android:id="@+id/elDedoAcusador"
        android:layout_width="0dp"
        android:layout_height="46dp"

        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="26dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/homeModeDA"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonYoNunca" />

    <Button
        android:id="@+id/conf"
        android:layout_width="125dp"
        android:layout_height="32dp"

        android:layout_marginTop="25dp"
        android:layout_weight="0.13"
        android:background="@color/black"
        android:text="@string/configuration"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/elDedoAcusador"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:text='@string/version'
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>